cmake_minimum_required(VERSION 3.0)
project(mythreadpool)
link_directories(${PROJECT_SOURCE_DIR}/bin)
set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
include_directories(${PROJECT_SOURCE_DIR}/include)
add_subdirectory(./src)
add_subdirectory(./example)